Site name on homepage a link

--- a/app/stylesheets/screen.scss
+++ b/app/stylesheets/screen.scss
@@ -137,6 +137,7 @@ input[type="button"], input[type="submit"] {
       .foo {color: cyan;}
       .bar {color: magenta;}
       .baz {color: yellow;}
+      a {text-decoration: none;}
       #task {
         margin-left: -0.5em;
         color: #aaa;
