--- a/app/views/session/new.html.haml
+++ b/app/views/session/new.html.haml
@@ -2,8 +2,9 @@
   =link_to image_tag("logo_medium.png", :title => "Tinker the taskbot", :class => 'logo'), "/"
   #description
     #app_name
-      Tinker
-      %span#task Task
+      %a(href="/")
+        Tinker
+        %span#task Task
       %br
       \--
       %span.foo>< -
