--- a/app/views/users/_form.html.haml
+++ b/app/views/users/_form.html.haml
@@ -1,7 +1,7 @@
 -form.inputs do
   =form.input :username if @user.new_record?
   =form.input :email, :required => false, :label => "email (optional)"
-  =form.input :password, :label => ("password (leave blank if you're not changing)" unless @user.new_record?)
+  =form.input :password, :label => ("password (leave blank if you're not changing)" unless @user.new_record?), :value => ""
   =form.input :password_confirmation
   
 :javascript
