--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -17,10 +17,10 @@
       #header
         -if current_user
           -unless controller_name == 'lists' && action_name == 'index'
-            =link_to("< back to my lists", lists_path, :id => "my_lists")
+            =link_to(image_tag("arrow_left.png")+"back to my lists", lists_path, :class => 'top_nav')
         -else
           -unless controller_name == 'session'
-            =link_to("< home", "/")
+            =link_to(image_tag("arrow_left.png")+"Home", "/", :class => 'top_nav')
         #account
           -if current_user
             =link_to h(current_user.username), edit_user_path
