Signup link now re-populates both username and password.  Password not cleared per request.

--- a/app/stylesheets/screen.scss
+++ b/app/stylesheets/screen.scss
@@ -193,7 +193,7 @@ form#new_session {
     border-color: #eee;
     border-style: solid;
   }
-  a.signup {
+  .signup {
     @include border-radius(5px);
     @include clearfix;
     margin-top: 30px;
