On new action rather than create, when pre-populated, focus empty fields.

--- a/app/views/session/new.html.haml
+++ b/app/views/session/new.html.haml
@@ -41,7 +41,7 @@
       var username = $("#username").val(),
           password = $("#password").val(),
           href = $(this).attr("href") + "?user[username]=" + username + "&user[password]=" + password;
-      if (username)
+      if (username || password)
         $(this).attr("href", href);
       return true;
     });
